# edge_detector

./: CMakeLists.txt  Dockerfile  package.xml  run.sh  start_core.sh
launch/: launch.launch
msg/: NamedFeature.msg  RecognisedFeatureArray.msg
src/: cascade.xml  main.cpp
src/depth/: DepthFilter.cpp  DepthFilter.h
src/image/: ImageConverter.cpp  ImageConverter.h  ImageProcessor.cpp  ImageProcessor.h
src/recognition/: AngleRecogniser.cpp  AngleRecogniser.h  Feature.h  Recogniser.cpp  Recogniser.h
